@@ -22,11 +22,11 @@
 
 	<properties>
 		<!-- GWT -->
-		<gwt.version>2.8.0</gwt.version>
+		<gwt.version>2.8.1</gwt.version>
 		<gwt.style>OBF</gwt.style>
 
 		<!-- App Engine -->
-		<appengine.version>1.9.50</appengine.version>
+		<appengine.version>1.9.52</appengine.version>
 
 		<!-- Maven -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -84,8 +84,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
@@ -135,7 +135,7 @@
 					<!-- <excludes>**/*GwtTest.java</excludes> -->
 					<includes>**/*GwtTest.java</includes>
 
-					<extraJvmArgs>-Xmx3G -XX:MaxPermSize=1024M</extraJvmArgs>
+					<extraJvmArgs>-Xmx3G</extraJvmArgs>
 					<logLevel>INFO</logLevel>
 					<style>${gwt.style}</style>
 
@@ -156,7 +156,7 @@
 				<artifactId>appengine-maven-plugin</artifactId>
 				<version>${appengine.version}</version>
 				<configuration>
-				    <enableJarSplitting>true</enableJarSplitting>
+					<enableJarSplitting>true</enableJarSplitting>
 					<enableJarClasses>false</enableJarClasses>
 					<!-- Comment in the below snippet to bind to all IPs instead of just localhost -->
 					<address>0.0.0.0</address>
@@ -167,7 +167,6 @@
 						<jvmFlag>-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n</jvmFlag>
 						<jvmFlag>-XX:+CMSClassUnloadingEnabled</jvmFlag>
 						<jvmFlag>-XX:+CMSPermGenSweepingEnabled</jvmFlag>
-						<jvmFlag>-XX:MaxPermSize=1024M</jvmFlag>
 						<jvmFlag>-Xmx3G</jvmFlag>
 					</jvmFlags>
 					<version>0v4</version>
@@ -223,14 +222,15 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.googlecode.gwtquery</groupId>
-			<artifactId>gwtquery</artifactId>
-			<version>1.5-beta1</version>
-		</dependency>
-		<dependency>
 			<groupId>org.commonjava.googlecode.markdown4j</groupId>
 			<artifactId>markdown4j-gwt</artifactId>
 			<version>1.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.commonjava.googlecode.emoji</groupId>
+			<artifactId>emoji-gwt</artifactId>
+			<version>1.1</version>
 		</dependency>
 
 		<!-- Google App Engine -->
